--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "dotenv": "^8.2.0",
+    "mapbox.js": "^3.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-map-gl": "^5.2.2",
+    "react-map-gl": "^5.2.3",
     "react-scripts": "3.3.1"
   },
   "scripts": {
