--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.2.3",
+    "react-instantsearch-dom": "^6.4.0",
     "react-map-gl": "^5.2.3",
     "react-scripts": "3.3.1"
   },
