--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "algoliasearch": "^4.2.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0"
   },
