--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,10 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -12,14 +12,14 @@
   "engines": {
     "node": "8"
   },
+  "main": "lib/index.js",
   "dependencies": {
-    "algoliasearch": "^4.2.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
