--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "algoliasearch": "^4.1.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "firebase-functions": "^3.6.1",
     "mapbox.js": "^3.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
