--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@urbica/react-map-gl": "^1.13.1",
     "algoliasearch": "^4.1.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "firebase-functions": "^3.6.1",
+    "mapbox-gl": "^1.10.0",
     "mapbox.js": "^3.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
