--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-grid-system": "^6.2.3",
     "react-instantsearch-dom": "^6.4.0",
     "react-map-gl": "^5.2.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "supercluster": "^7.0.0",
     "swr": "^0.2.0",
