--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.2.3",
+    "react-helmet": "^6.0.0",
     "react-instantsearch-dom": "^6.4.0",
     "react-map-gl": "^5.2.3",
     "react-router-dom": "^5.1.2",
