--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-map-gl": "^5.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-sizeme": "^2.6.12",
     "supercluster": "^7.0.0",
     "swr": "^0.2.0",
     "use-supercluster": "^0.2.8"
