--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@urbica/react-map-gl-cluster": "^0.2.0",
     "algoliasearch": "^4.1.0",
     "bootstrap": "^4.4.1",
+    "csv": "^5.3.2",
     "dotenv": "^8.2.0",
     "firebase-functions": "^3.6.1",
     "mapbox-gl": "^1.10.0",
@@ -20,6 +21,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.0.1",
     "react-grid-system": "^6.2.3",
     "react-helmet": "^6.0.0",
     "react-instantsearch-dom": "^6.4.0",
