--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-functions": "^3.6.1",
     "mapbox-gl": "^1.10.0",
     "mapbox.js": "^3.2.1",
+    "papaparse": "^5.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
