--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "algoliasearch": "^4.1.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "firebase": "^7.14.5",
     "firebase-functions": "^3.6.1",
     "mapbox-gl": "^1.10.0",
     "mapbox.js": "^3.2.1",
