--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "algoliasearch": "^4.2.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
