--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "bootstrap": "^4.4.1",
     "csv": "^5.3.2",
     "dotenv": "^8.2.0",
-    "firebase": "^7.14.5",
     "express": "^4.17.1",
+    "firebase": "^7.14.5",
     "firebase-functions": "^3.6.1",
     "mapbox-gl": "^1.10.0",
     "mapbox.js": "^3.2.1",
     "papaparse": "^5.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
     "react-grid-system": "^6.2.3",
