--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-core": "^2.4.1",
-    "@devexpress/dx-react-core": "^2.4.1",
-    "@devexpress/dx-react-grid": "^2.4.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@urbica/react-map-gl": "^1.13.1",
+    "@devexpress/dx-core": "^2.7.6",
+    "@devexpress/dx-react-core": "^2.7.6",
+    "@devexpress/dx-react-grid": "^2.7.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@urbica/react-map-gl": "^1.15.1",
     "@urbica/react-map-gl-cluster": "^0.2.0",
-    "algoliasearch": "^4.1.0",
-    "axios": "^0.21.2",
-    "bootstrap": "^4.4.1",
-    "csv": "^5.3.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "firebase": "^7.14.5",
-    "firebase-functions": "^3.6.1",
-    "mapbox-gl": "^1.10.0",
-    "mapbox.js": "^3.2.1",
-    "papaparse": "^5.2.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-csv": "^2.0.3",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^11.0.1",
-    "react-grid-system": "^6.2.3",
-    "react-helmet": "^6.0.0",
-    "react-instantsearch-dom": "^6.4.0",
-    "react-map-gl": "^5.2.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
-    "react-sizeme": "^2.6.12",
-    "serverless-http": "^2.5.0",
-    "supercluster": "^7.0.0",
-    "swr": "^0.2.0",
-    "use-supercluster": "^0.2.8"
-  },
+    "algoliasearch": "^4.13.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "csv": "^6.1.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "firebase": "^9.9.0",
+    "firebase-functions": "^3.22.0",
+    "mapbox-gl": "^2.9.1",
+    "mapbox.js": "^3.3.1",
+    "papaparse": "^5.3.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.2",
+    "react-grid-system": "^8.1.5",
+    "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.30.0",
+    "react-map-gl": "^7.0.17",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-sizeme": "^3.0.2",
+    "serverless-http": "^3.0.1",
+    "supercluster": "^6.0.0",
+    "swr": "^1.3.0",
+    "use-supercluster": "^0.4.0"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
