--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.30.0",
     "react-map-gl": "^7.0.17",
-    "react-router-dom": "^6.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-sizeme": "^3.0.2",
     "serverless-http": "^3.0.1",
     "supercluster": "^6.0.0",
     "swr": "^1.3.0",
     "use-supercluster": "^0.4.0"
-    },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
