Added a python cleanup script that merges the stranding database data with the csv file data for Domoic Acid.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+DataCleaning/DA_LMLStrand_Site.csv
+DataCleaning/lml-stranding-map-export.json
+DataCleaning/result.json
