--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-sizeme": "^3.0.2",
+    "rheostat": "^4.1.1",
     "serverless-http": "^3.0.1",
     "supercluster": "^6.0.0",
     "swr": "^1.3.0",
